# app-fetch-fft

./: .env.example  .gitignore  config.py  database.py  main.py  model.py  pyproject.toml  tarik.py
api/: auth.py
